<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" 
     xmlns:myapp="http://schemas.android.com/apk/res-auto">
 
    <item
        android:id="@+id/menu_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_delete"
        android:titleCondensed="Delete">
    </item>
    
	<item
        android:id="@+id/menu_edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_edit"
        android:titleCondensed="Edit">
    </item>
    
	<item
	    android:id="@+id/menu_share"
	    android:icon="@drawable/ic_menu_share"
	    android:title="@string/menu_share"
	    myapp:showAsAction="ifRoom"
	    myapp:actionProviderClass="android.support.v7.widget.ShareActionProvider">
	</item>
 
</menu>