<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainViewFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" 
    android:background="#211D1D">



     <include layout="@layout/header" />
     
    <ImageButton
        android:id="@+id/redButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/buttonDescription"
        android:src="@drawable/red_button" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="192dp"
        android:gravity="center_horizontal"
        android:keepScreenOn="true"
        android:orientation="horizontal"
        android:paddingTop="30sp" >

        <TextView
            android:id="@+id/wastedTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/wastedTimeLabel"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="visible" />

        <com.aachaerandio.wastedtime.components.Chronometer
            android:id="@+id/chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="30sp"
            android:text="@string/chrono"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>